# cdirs

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  Makefile.am  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  conanfile.py  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  lib_8cpp.html  lib_8hpp.html  main.cpp  main_8cpp.html  makepy.py  meson.build  modules.html  namespaces.html  pages.html  searchdata-v1.js  structfile.html  structlibrary.html
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
subprojects/: tabulate.wrap
test/: CMakeLists.txt
test/source/: cdirs_test.cpp
